# package-segmenter

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/flow_segmenter/: __init__.py  config.py  segmenter.py
