[project]
name = "flow_segmenter"
version = "0.1.0"
description = "Segmenter Package for the Flow Project (flow-project.net)"
readme = "README.md"
authors = [
    { name = "Jonas Widmer", email = "jonas.widmer@unibe.ch" },
    { name = "Dana Rebecca Meyer", email = "dameyer@techfak.uni-bielefeld.de" }
]
requires-python = ">=3.12"
dependencies = [
    "htrflow>=0.2.5",
    "kraken>=5.3.0",
    "lxml>=5.4.0",
    "notebook>=7.4.3",
    "numpy<2.1.dev0",
    "pillow>=11.2.1",
    "shapely>=2.0.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
