[project]
name = "flow_segmenter"
version = "0.1.5"
description = "Segmenter Package for the Flow Project (flow-project.net)"
readme = "README.md"
authors = [
    { name = "Jonas Widmer", email = "jonas.widmer@unibe.ch" },
    { name = "Dana Rebecca Meyer", email = "dameyer@techfak.uni-bielefeld.de" }
]
requires-python = ">=3.12"
dependencies = [
    "htrflow",
    "kraken>=5.2.9",
    "lxml",
    "notebook",
    "numpy",
    "pillow",
    "shapely",
    "scipy",
    "pydantic>=2.11.7",
]

